# college_library

./: README.md
backend/: README.md  celerybeat-schedule  dump.rdb  pyproject.toml  setup.sql
backend/main/: app.py
backend/main/admin/: admin.py
backend/main/admin/routers/: faculty.py  liberarian.py  librarian.py  token.py
backend/main/authentication/: auth_var.py  create_token.py  verify_info.py  verify_token.py
backend/main/cursor/: base.py  cursor.py  redis_cursor.py
backend/main/liberarian/: liberarian.py
backend/main/liberarian/routers/: account.py  book.py  token.py
backend/main/librarian/: librarian.py
backend/main/librarian/routers/: account.py  book.py  faculty.py  token.py
backend/main/librarian/routers/book/: blacklist.py  book.py  borrow.py  reserve.py
backend/main/microservices/: compose_mail.py  gen_code.py  send_mail.py
backend/main/microservices/celery/: app.py  env.py  tasks.py
backend/main/openapi_meta/: app_metadata.py  tag.py
backend/main/pydantic_models/: author.py  basemodel.py  book.py  borrow.py  faculty.py  liberarian.py  librarian.py  redis.py  staff.py  tag.py  token.py  user.py
backend/main/schemas/: author.py  basemodel.py  book.py  borrow.py  faculty.py  liberarian.py  librarian.py  school.py  staff.py  student.py  user.py
backend/main/schemas/junctions/: author_book.py  faculty_book.py
backend/main/user/: user.py
backend/main/user/routers/: account.py  book.py  faculty.py  registration.py  token.py
backend/main/user/routers/book/: blacklist.py  book.py  borrow.py  reserves.py
frontend/: .env  (+2 more)
(+137 files in other folders)
